<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_item"
    android:background="@drawable/back_ground_item_book"
    android:padding="@dimen/padding_image">

    <ImageView
        android:id="@+id/image_view_thumbnail"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:padding="@dimen/padding_image"
        android:background="@color/gray_1"
        android:src="@drawable/ic_image_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_title"
        style="@style/TextLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/label_title"
        app:layout_constraintBottom_toTopOf="@id/label_author"
        app:layout_constraintStart_toEndOf="@id/image_view_thumbnail"
        app:layout_constraintTop_toTopOf="@id/image_view_thumbnail"/>

    <TextView
        android:id="@+id/label_author"
        style="@style/TextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_author"
        app:layout_constraintBottom_toTopOf="@id/label_published_date"
        app:layout_constraintStart_toEndOf="@id/image_view_thumbnail"
        app:layout_constraintTop_toBottomOf="@id/text_view_title" />

    <TextView
        android:id="@+id/label_published_date"
        style="@style/TextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_published_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/text_view_author" />

    <TextView
        android:id="@+id/text_view_title"
        style="@style/TextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content"
        app:layout_constraintBaseline_toBaselineOf="@id/label_title"
        app:layout_constraintStart_toEndOf="@id/label_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_view_author"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content"
        app:layout_constraintBaseline_toBaselineOf="@id/label_author"
        app:layout_constraintStart_toEndOf="@id/label_author"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"/>

    <TextView
        android:id="@+id/text_view_published_date"
        style="@style/TextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_content"
        app:layout_constraintBaseline_toBaselineOf="@id/label_published_date"
        app:layout_constraintStart_toEndOf="@id/label_published_date"
        app:layout_constraintTop_toBottomOf="@id/text_view_author"/>

</androidx.constraintlayout.widget.ConstraintLayout>